--- a/apps/research-methods-in-psychology/package.json
+++ b/apps/research-methods-in-psychology/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf .next .turbo .velite",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "dev": "next dev --turbopack -p 3001",
+    "dev": "next dev -p 3001",
     "start": "next start -p 3001",
     "analyze": "ANALYZE=true next build"
   },
